--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
               <p>He is a transport-policy researcher, adviser, writer and trainer with a background in academia and in non-profits. He focuses on urban transport policy and parking</p>
             </div>
           </div>
-<!--
+
           <div class="text-center p-3 p-md-5 bg-white">
             <div class="mb-4">            
               <img src="images/Guests/anjalikmohan.png" alt="Image" class="w-50 mx-auto img-fluid rounded-circle">
@@ -138,7 +138,7 @@
               <p>She has over three decades of experience in development, institutional and policy frameworks, urban planning and management with work in Bhopal, Ranchi, Dharwad, Delhi and Bangalore.</p>
             </div>
           </div>
--->
+
           <div class="text-center p-3 p-md-5 bg-white">
             <div class="mb-4">            
               <img src="images/Guests/shreyagadepalli.jpeg" alt="Image" class="w-50 mx-auto img-fluid rounded-circle">
@@ -214,6 +214,25 @@
           </div>
         </div>
         
+         <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
+          <div class="image" style="background-image: url('images/pod-images/OoruLabs EP16-1.png');"></div>
+          <div class="text">
+            <h5><span class="badge bg-success text-white">Coming soon</span></h5>
+            <h3 class="font-weight-light"><a href="#">Episode 16: Should we stop preparing Masterplans?</a></h3>
+            <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 20 May 2023 <span class="sep">/</span> 00:00</small></span></div>
+            <p class="mb-4">In this episode Dr Anjali Karol Mohan talks about city master plans in India and how their implementation is faring. She also throws light on what is mixed use and how it can be leveraged to make cities more livable.</p>
+            <h5 class="mb-1">Also on</h5>
+            <div>
+              <a href="#" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
+                <span class="icon-youtube"></span></a>
+              <a href="#" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
+                <span class="icon-spotify"></span></a>
+              <a href="#" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
+                <span class="icon-podcast"></span></a>
+            </div>
+          </div>
+        </div>
+
         <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
           <div class="image" style="background-image: url('images/pod-images/OoruLabs EP15-1.png');"></div>
           <div class="text">
@@ -390,7 +409,7 @@
             <div class="text">
               <h3 class="font-weight-light"><a href="#">Episode 07: Will Bicycle Sharing work in India? </a></h3>
               <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 18 March 2023 <span class="sep">/</span> 55:53</small></span></div>
-              <p class="mb-4">We speak with Arjit Soni, who runs a bootstrapped Public Bicycle Sharing System called MYBYK across 6 cities in India, on the potential of bicycle sharing. Why he has been able to survive when the big guns with money failed in the bicycle sharing. THe advantages of his model and his challenges. </p>
+              <p class="mb-4">We speak with Arjit Soni, who runs a bootstrapped Public Bicycle Sharing System called MYBYK across 6 cities in India, on the potential of bicycle sharing. Why he has been able to survive when the big guns with money failed in the bicycle sharing. The advantages of his model and his challenges. </p>
                 <iframe src="https://podcasters.spotify.com/pod/show/oorulabs/embed/episodes/Will-Bicycle-Sharing-work-in-India---OoruLabs-Talking-Heads-podcast-Episode-07-e20long" height="102px" width="100%" frameborder="0" scrolling="no"></iframe>
             <h5 class="mb-1">Also on</h5>
             <div>
@@ -466,7 +485,7 @@
             <div class="text">
               <h3 class="font-weight-light"><a href="#">Episode 04: What the Dutch! </a></h3>
               <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 19 February 2023 <span class="sep">/</span> 51:31</small></span></div>
-              <p class="mb-4">We speak with Dirk De Jager, former Dy Mayor of various Amsterdam districts and consultant who has helped cities in Iran and Turkey put up bicycle lanes. He tells us how "We are not Amsterdam" is a bad excuse because "Amsterdam was also us". THe steps to transform can be hard but extremely doable, but only if we did a few things now.</p>
+              <p class="mb-4">We speak with Dirk De Jager, former Dy Mayor of various Amsterdam districts and consultant who has helped cities in Iran and Turkey put up bicycle lanes. He tells us how "We are not Amsterdam" is a bad excuse because "Amsterdam was also us". The steps to transform can be hard but extremely doable, but only if we did a few things now.</p>
                   <iframe src="https://podcasters.spotify.com/pod/show/oorulabs/embed/episodes/What-the-Dutch--OoruLabs-Podcast-Ep-4-e1v685i" height="102px" width="100%" frameborder="0" scrolling="no"></iframe>
             <h5 class="mb-1">Also on</h5>
             <div>
@@ -485,7 +504,7 @@
             <div class="text">
               <h3 class="font-weight-light"><a href="#">Episode 03: Did we miss the bus? </a></h3>
               <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 12 February 2023 <span class="sep">/</span> 41:22</small></span></div>
-              <p class="mb-4">We speak with Shreya Gadepalli of Urbanworks Institute about the story of the bus in India. WHy in the race to plon Metros we dont know some very startling facts about the bus. We discuss models of operation, wether the bus should be free, how parking plays a role etc. </p>
+              <p class="mb-4">We speak with Shreya Gadepalli of Urbanworks Institute about the story of the bus in India. Why in the race to plan Metros we dont know some very startling facts about the bus. We discuss models of operation, wether the bus should be free, how parking plays a role etc. </p>
                   <iframe src="https://podcasters.spotify.com/pod/show/oorulabs/embed/episodes/Did-we-miss-the-bus---OoruLabs-Podcast-EP3-e1urf8k" height="102px" width="100%" frameborder="0" scrolling="no"></iframe>
             <h5 class="mb-1">Also on</h5>
             <div>
