--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
         </div>
 
         <div class="d-block d-md-flex podcast-entry bg-warning mb-5" data-aos="fade-up">
-          <div class="image" style="background-image: url('images/img_4.jpg');"></div>
+          <div class="image" style="background-image: url('images/support the pod-1.png');"></div>
           <div class="text">
             <h5 class="btn bg-primary text-white" style="white-space: normal !important; word-wrap: break-word;">This podcast is supported by "your organisation name"</h5>
             <h3 class="font-weight-light"><a href="#">Episode 00: Podcast title</a></h3>
