--- a/about.html
+++ b/about.html
@@ -96,7 +96,7 @@
           <div class="col-md-6 col-lg-6 text-center mb-5" data-aos="fade-up">
             <img src="images/person_2.jpg" alt="Image" class="img-fluid w-50 rounded-circle mb-3">
             <h2 class="text-black font-weight-light mb-4">Knerav Kodolikar</h2>
-            <p style="text-align: justify;">Knerav has a Bachelors in Economics from Christ University, Bengaluru. He conceptualises and builds economic incentives for sustainablity projects at Urban Morph. He is also technology developer building the AltMo platform. He rides for Equipe Goa amatuer racing team and at the National Championships.</p>
+            <p style="text-align: justify;">Knerav has a Bachelors in Economics from Christ University, Bengaluru. He conceptualises and builds economic incentives for sustainablity projects at Urban Morph. He is also technology developer building the <a href="https://altmo.app" class="text-decoration-none" target="_blank">AltMo</a> platform. AltMo is the official platform for the Ministry of Housing and Urban Affairs, Smart City Mission's, Cycle2Work and Freedom2WalkCycleRun challenge. He rides for Equipe Goa amatuer racing team and at the National Championships.</p>
             <p>
               <a href="#" class="pl-0 pr-3"><span class="icon-twitter"></span></a>
               <a href="#" class="pl-3 pr-3"><span class="icon-instagram"></span></a>
@@ -111,7 +111,7 @@
       <div class="container">
         <div class="row" data-aos="fade-up">
           <div class="col-md-12">
-            <img src="images/hero_bg_1.jpg" alt="Image" class="img-fluid mb-5">
+            <img src="images/hero_bg_3.jpg" alt="Image" class="img-fluid mb-5">
           </div>
           <div class="col-md-6">
             <p class="lead">Welcome to the OoruLabs podcast. Ever complained how bad our cities are? How bad your commute is? You’ll get to hear from people who are working to solve these problems. This is your weekly soapbox for Urban Sustainability!</p>
