adjusted future episodes

--- a/index.html
+++ b/index.html
@@ -151,6 +151,16 @@
 
           <div class="text-center p-3 p-md-5 bg-white">
             <div class="mb-4">            
+              <img src="images/Guests/alokpkumar.jpeg" alt="Image" class="w-50 mx-auto img-fluid rounded-circle">
+            </div>
+            <div class="">
+              <h3 class="font-weight-light h5">Alok Prasanna Kumar</h3>
+              <p>Alok Prasanna Kumar is Co-Founder and Lead, Vidhi Karnataka. His areas of research include judicial reforms, Constitutional law, urban development, and law and technology.</p>
+            </div>
+          </div>
+
+          <div class="text-center p-3 p-md-5 bg-white">
+            <div class="mb-4">            
               <img src="images/Guests/satyaarikutharam.jpeg" alt="Image" class="w-50 mx-auto img-fluid rounded-circle">
             </div>
             <div class="">
@@ -178,7 +188,7 @@
               <p>Srinivas is a strong believer in systems like ward committees that enable citizen participation and bridge the gap between politicians and citizens in local governance.</p>
             </div>
           </div>
-<!--
+
           <div class="text-center p-3 p-md-5 bg-white">
             <div class="mb-4">            
               <img src="images/Guests/amitgupta.jpeg" alt="Image" class="w-50 mx-auto img-fluid rounded-circle">
@@ -188,7 +198,7 @@
               <p>Co-Founder and CEO of Yulu, a leading micromobility shared services company in India. He was earlier the co-founder of InMobi a successful startup.</p>
             </div>
           </div>
--->
+
           <div class="text-center p-3 p-md-5 bg-white">
             <div class="mb-4">            
               <img src="images/Guests/arjitsoni.jpg" alt="Image" class="w-50 mx-auto img-fluid rounded-circle">
@@ -210,17 +220,55 @@
 
         <div class="row mb-5" data-aos="fade-up">
           <div class="col-md-12 text-center">
-            <h2 class="font-weight-bold text-black">Recent Podcasts</h2>
+            <h2 class="font-weight-bold text-black">Podcast Library</h2>
           </div>
         </div>
         
          <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
+          <div class="image" style="background-image: url('images/pod-images/OoruLabs EP18-1.png');"></div>
+          <div class="text">
+            <h5><span class="badge bg-success text-white">Coming soon</span></h5>
+            <h3 class="font-weight-light"><a href="#">Episode 18: Should we stop preparing Masterplans?</a></h3>
+            <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 3 June 2023 <span class="sep">/</span> 00:00</small></span></div>
+            <p class="mb-4">In this episode <strong class="text-primary">Dr Anjali Karol Mohan</strong>, with 3 decades of experience in master planning for cities across India, talks about city master plans and how their implementation is faring. She also throws light on what is mixed use and how it can be leveraged to make cities more livable.</p>
+            <h5 class="mb-1">Also on</h5>
+            <div>
+              <a href="#" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
+                <span class="icon-youtube"></span></a>
+              <a href="#" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
+                <span class="icon-spotify"></span></a>
+              <a href="#" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
+                <span class="icon-podcast"></span></a>
+            </div>
+          </div>
+        </div>
+
+         <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
+          <div class="image" style="background-image: url('images/pod-images/OoruLabs EP17-1.png');"></div>
+          <div class="text">
+            <h5><span class="badge bg-success text-white">Coming soon</span></h5>
+            <h3 class="font-weight-light"><a href="#">Episode 17: Does size matter for cities?</a></h3>
+            <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 27 May 2023 <span class="sep">/</span> 00:00</small></span></div>
+            <p class="mb-4">In this episode <strong class="text-primary">Alok Prasanna Kumar</strong> from Vidhi Legal Karnataka, talks to us about urban governance reforms. Are bigger cities better? Will governance be better if they were smaller? Is there a legal framework that can enable better governance of the cities? </p>
+            <h5 class="mb-1">Also on</h5>
+            <div>
+              <a href="#" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
+                <span class="icon-youtube"></span></a>
+              <a href="#" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
+                <span class="icon-spotify"></span></a>
+              <a href="#" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
+                <span class="icon-podcast"></span></a>
+            </div>
+          </div>
+        </div>
+
+        <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
           <div class="image" style="background-image: url('images/pod-images/OoruLabs EP16-1.png');"></div>
           <div class="text">
             <h5><span class="badge bg-success text-white">Coming soon</span></h5>
-            <h3 class="font-weight-light"><a href="#">Episode 16: Should we stop preparing Masterplans?</a></h3>
-            <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 20 May 2023 <span class="sep">/</span> 00:00</small></span></div>
-            <p class="mb-4">In this episode <strong class="text-primary">Dr Anjali Karol Mohan</strong>, with 3 decades of experience in master planning for cities across India, talks about city master plans and how their implementation is faring. She also throws light on what is mixed use and how it can be leveraged to make cities more livable.</p>
+            <h3 class="font-weight-light"><a href="#">Episode 16: The problem with parking</a></h3>
+            <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 20 May 2023 <span class="sep">/</span> 01:01:51</small></span></div>
+            <p class="mb-4">This episode is with <strong class="text-primary">Dr Paul Barter</strong> who talks about parking issues world wide. How sustainability in transport cannot ignore parking and its reform. He has worked for more than two decades on parking reforms and is the host of the Reinventing parking podcast.</p>
             <h5 class="mb-1">Also on</h5>
             <div>
               <a href="#" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
@@ -237,9 +285,9 @@
           <div class="image" style="background-image: url('images/pod-images/OoruLabs EP15-1.png');"></div>
           <div class="text">
             <h5><span class="badge bg-success text-white">Coming soon</span></h5>
-            <h3 class="font-weight-light"><a href="#">Episode 15: The problem with parking</a></h3>
-            <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 13 May 2023 <span class="sep">/</span> 01:01:51</small></span></div>
-            <p class="mb-4">This episode is with <strong class="text-primary">Dr Paul Barter</strong> who talks about parking issues world wide. How sustainability in transport cannot ignore parking and its reform. He has worked for more than two decades on parking reforms and is the host of the Reinventing parking podcast.</p>
+            <h3 class="font-weight-light"><a href="#">Episode 15: Will shared micromobility survive</a></h3>
+            <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 13 May 2023 <span class="sep">/</span> 00:00</small></span></div>
+            <p class="mb-4">This episode is with <strong class="text-primary">Amit Gupta</strong> the CEO of one of Indias leading shared micromobility fleet operator. He talks about the current state of micromobility in India and the outlook for shared micromobility.</p>
             <h5 class="mb-1">Also on</h5>
             <div>
               <a href="#" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
